# astrors

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  output.fits  outputhead.fits
.github/: FUNDING.yml
.github/workflows/: codecov.yml  rust.yml
dev/: fits_format.md  testing.ipynb
dev/rw_bintable/: mod.rs  utils.rs
dev/rw_bintable/csv/: buffer.rs  parser.rs  utils.rs
dev/rw_bintable/csv/read_impl/: mod.rs
old/: build.rs
old/lib/: fits_hcompress.c
old/src/: lib.rs  main.rs
old/src/io/: hdulist.rs  image.rs  mod.rs
old/testdata/: Tests.ipynb  test.fits
src/: lib.rs  main.rs
src/cextern/: fits_hcompress.c
src/io/: aux.rs  datatypes.rs  getdata.rs  hdulist.rs  header.rs  image.rs  mod.rs  utils.rs
src/io/hdus/: bintablehdu.rs  imagehdu.rs  mod.rs  primaryhdu.rs  utils.rs
src/io/hdus/bintable/: bintable.rs  bintable_utils.rs  bintablehdu.rs  buffer.rs  listtype.rs  mod.rs  utils.rs
src/io/hdus/image/: image.rs  imagehdu.rs  imageops.rs  mod.rs  utils.rs
src/io/hdus/table/: bintable.rs  buffer.rs  mod.rs  table.rs  table_utils.rs  tablehdu.rs
src/io/hdus/table/rw_bintable/: mod.rs  partition.rs  prelude.rs  tests.rs  utils.rs
src/io/hdus/table/rw_bintable/csv/: buffer.rs  mod.rs  parser.rs  read.rs  write_impl.rs
src/io/hdus/table/rw_bintable/csv/read_impl/: batched_mmap.rs  batched_read.rs  mod.rs
src/io/header/: card.rs  header.rs  mod.rs
testdata/: Untitled.ipynb
tests/: bin_table.rs  bintable_test.rs  common.rs  compressed_im.rs  compressed_im_test.rs  hdu_test.rs  header_test.rs  image_test.rs  polars_test.rs  table_test.rs
tests/data/: 0.1_0.1_300_R_swp_splus.fits.fz  EUVEngc4151imgx.fits  WFPC2u57_2.fits  bintable_STRIPE82-2018.fits  compheader.fits  test.fits  test_array_lenght.fits  test_bintable_nan.fits  test_comp_image.fits
tests/data/outputs/: EUVEngc4151imgx_written_by_astrors.fits  WFPC2u57_2_written_by_astrors.fits  arr_test_bintable.fits  header_modify_outtest.fits  header_outtest.fits  imagemodified.fits  primary_hdu_test.fits  primary_hdu_test_modify.fits  test.fits  test_bintable.fits  test_modify.fits  test_table.fits
