[package]
name = "astrors"
version = "0.1.3"
authors = ["Gustavo Schwarz gustavo.b.schwarz@gmail.com", "Vincenzo Alberice alberice.vincenzo@gmail.com", "Thales Lopes thales.t.lopes@gmail.com"] # A list of the package authors
edition = "2021"

homepage = "https://github.com/schwarzam/astrors"
license = "BSD-3-Clause" # The license your package is under

readme = "README.md"

description = "Astronomical package to deal with FITS (compressed also) and WCS, still in development."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

arrow-array = { version = ">=41", default-features = false }
arrow-buffer = { version = ">=41", default-features = false }
arrow-data = { version = ">=41", default-features = false }
arrow-schema = { version = ">=41", default-features = false }

rayon = "1.8.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-stats = "0.5.1"
memmap = "0.7"
byteorder = "1.5.0"
polars = { version = "0.38.3" }

polars-core = { version = "0.38.3" }
polars-error = { version = "0.38.3" }
polars-lazy = { version = "0.38.3", default-features = false }

polars-utils = { version = "0.38.3", default-features = false }

chrono = { version = "0.4.35", default-features = false, features = ["std"] }
chrono-tz = "0.8.1"

tokio = "1.26"
tokio-util = "0.7.8"

fast-float = { version = "0.2" }

memchr = "2.6"
once_cell = "1"

simdutf8 = "0.1.4"
atoi_simd = "0.15.5"

regex = "1.10.3"
home = "0.5.4"

ryu = {}
itoa = {}

[build-dependencies]
cc = "1.0.79"

[dependencies.arrow-format]
package = "polars-arrow-format"
version = "0.1.0"

[dependencies.arrow]
package = "polars-arrow"
version = "0.38.3"
default-features = false
features = [
  "compute_aggregate",
  "compute_arithmetics",
  "compute_bitwise",
  "compute_boolean",
  "compute_boolean_kleene",
  "compute_cast",
  "compute_comparison",
]
