[package]
authors = [
  "Gustavo Schwarz gustavo.b.schwarz@gmail.com",
  "Vincenzo Alberice alberice.vincenzo@gmail.com",
  "Thales Lopes thales.t.lopes@gmail.com",
] # A list of the package authors
edition = "2021"
name = "astrors-fork"
version = "0.1.10"

license = "BSD-3-Clause" # The license your package is under
repository = "https://github.com/schwarzam/astrors" 

readme = "README.md"

description = "(FORK) Astronomical package to deal with FITS (compressed also) and WCS, still in development."

include = ["/src", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
num_cpus = "1.0"
polars = {version = "0.41.0", features = ["dtype-u8", "dtype-i8", "dtype-i16"]}
rand = "0.8.5"
rayon = "1.8.0"
regex = "1.10.3"

[build-dependencies]
byteorder = "1.5.0"
cc = "1.0.79"
chrono = "0.4.35"
memmap = "0.7"
ndarray = {version = "0.15.6", features = ["rayon"]}
ndarray-stats = "0.5.1"
num_cpus = "1.0"
