[package]
name = "astrors"
version = "0.2.1"
authors = ["Gustavo Schwarz gustavo.b.schwarz@gmail.com", "Vincenzo Alberice alberice.vincenzo@gmail.com", "Thales Lopes thales.t.lopes@gmail.com"] # A list of the package authors
edition = "2021"

repository = "https://github.com/schwarzam/astrors"
license = "BSD-3-Clause" # The license your package is under

readme = "README.md"

description = "Astronomical package to deal with FITS (compressed also) and WCS, still in development."

include = ["/src", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.0"
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-stats = "0.5.1"
memmap = "0.7"
byteorder = "1.5.0"
polars = { version = "0.38.3", features=["dtype-u8", "dtype-i8", "dtype-i16"] }
num_cpus = "1.0"
chrono = "0.4.35"
regex = "1.10.3"
rand = "0.8.5"

[build-dependencies]
cc = "1.0.79"

